--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,7 +10,7 @@
     	android:gravity="center"
     	android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-    	android:text="This is more a proof of concept of live camera streaming than a real app, it still needs improvement :)\nJust enter your pc ip address and press stream !"
+    	android:text="Hi folks, i'm a beta :)\nJust enter your pc ip address and press stream !"
     	android:layout_weight="3"
     />
 	<ImageView 
@@ -29,7 +29,7 @@
 	>
 		<EditText
 			android:gravity="center_horizontal"
-			android:text="192.168.43.1"
+			android:text="192.170.0.1"
 			android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:layout_weight="9"
