--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,7 +10,7 @@
     	android:gravity="center"
     	android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-    	android:text="Hi folks, i'm a beta :)\nJust enter your pc ip address and press stream !"
+    	android:text="Hi folks :)\nJust enter your pc ip address and press stream !"
     	android:layout_weight="3"
     />
 	<ImageView 
