--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,55 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/mainlayout"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mainlayout"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    
-    >
-    <TextView 
-    	android:gravity="top"
-    	android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-    	android:layout_weight="3"
-    	android:id="@+id/console"
-    	android:textColor="#FFAC63"
-    	android:padding="10px"
-    />
-	<ImageView 
+    android:layout_height="fill_parent" >
+
+    <SurfaceView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/smallcameraview"
+        android:layout_alignParentLeft="true" />
+
+    <LinearLayout
+	    android:id="@+id/linearLayout2"
 	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:src="@drawable/ic_eye"
-	    android:layout_weight="2"
-	/>
-	<LinearLayout 
-	    android:orientation="horizontal"
-		android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"
-    	android:layout_weight="3"
-    	android:gravity="bottom"
-    	android:padding="30px"
-	>
-		<EditText
-			android:gravity="center_horizontal"
-			android:text="192.170.0.1"
-			android:layout_width="wrap_content"
-    		android:layout_height="wrap_content"
-    		android:layout_weight="9"
-    		android:id="@+id/ip"
-		/>
-		<Button 
-			android:text="Stream !"
-			android:layout_width="wrap_content"
-    		android:layout_height="wrap_content"
-    		android:layout_weight="1"
-    		android:id="@+id/streambutton"
-		/>
+	    android:gravity="center"
+	    android:layout_height="fill_parent" >
+    
+		<ImageView
+		    android:id="@+id/logo"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:src="@drawable/ic_eye" />
+	
 	</LinearLayout>
-	
-    <SurfaceView 
-       	android:layout_width="1px"
- 		android:layout_height="1px"
- 		android:id="@+id/smallcameraview"
-   />
-	
-</LinearLayout>	
+    
+	<TextView 
+		android:gravity="top"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_weight="3"
+		android:id="@+id/console"
+		android:textColor="#FFAC63"
+		android:shadowRadius="1"
+		android:shadowDx="1"
+		android:shadowDy="1"
+		android:shadowColor="#000000"
+		android:padding="10px"
+		android:text="192.170.0.1"
+    />
+    
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true" >
+
+        <EditText
+            android:id="@+id/ip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="9"
+            android:gravity="center_horizontal"
+            android:text="192.170.0.1" >
+        </EditText>
+
+        <Button
+            android:id="@+id/streambutton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Stream !" />
+        
+    </LinearLayout>
+
+</RelativeLayout>
