- Many bug fix - More comments & cleaner code - New features:    - User can remotly change the stream quality    - Sound can be disabled from UI and remotly    - User can toggle the flash of the phone if it has one
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@107 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -3,4 +3,7 @@
     <item android:id="@+id/quality"
           android:icon="@drawable/options"
           android:title="Quality" />
+    <item android:id="@+id/options"
+          android:icon="@drawable/options"
+          android:title="Options" />
 </menu>
