- Some code cleaning - H263 Support added (may not work well, packetizer too simple, but that's a start) - Integration of android rtp api -> not working but that's also a start
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@113 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -12,5 +12,24 @@
                 android:summary="AMRNB seems buggy on VLC 2, you might need to disable sound streaming" />
 
     </PreferenceCategory>
+    
+        <PreferenceCategory
+            android:title="Video streaming">
+
+        <CheckBoxPreference
+            android:key="stream_video"
+            android:title="Video streaming"
+            android:defaultValue="true"
+            android:summary="Enable/Disable streaming of video" />
+            
+        <ListPreference
+            android:title="Default video encoder"
+            android:key="video_encoder"
+            android:defaultValue="1"
+            android:summary="Two video compression algorithms are available: H.263 and H.264"
+            android:entries="@array/listEncoderArray"
+            android:entryValues="@array/listEncoderValues" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
