Experimental aac support, may not work well :/ Requieres ice cream sandwich ! Plus some bug fixes
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@119 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2,14 +2,25 @@
 
 <resources>
 
-    <string-array name="listEncoderArray">
+    <string-array name="listVideoEncoderArray">
         <item>H.263</item>
         <item>H.264</item>
     </string-array>
 
-    <string-array name="listEncoderValues">
+    <string-array name="listVideoEncoderValues">
         <item>2</item>
         <item>1</item>
+    </string-array>
+    
+    
+    <string-array name="listAudioEncoderArray">
+        <item>AMR</item>
+        <item>AAC</item>
+    </string-array>
+
+    <string-array name="listAudioEncoderValues">
+        <item>3</item>
+        <item>5</item>
     </string-array>
 
 </resources>
