- RTSP server is now multithreaded\n- Added an HTTP server for sdp: http://ip:8080/spydroid.sdp\n- Added broadcast receiver for wifi state
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@132 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -9,7 +9,7 @@
                 android:key="stream_audio"
                 android:title="Sound streaming"
                 android:defaultValue="true"
-                android:summary="Enable/Disable audio streamiing" />
+                android:summary="Enable/Disable audio streaming" />
 
         <ListPreference
             android:title="Audio encoder"
@@ -61,4 +61,21 @@
 
     </PreferenceCategory>
 
+	<PreferenceCategory
+            android:title="Interfaces">
+
+		<CheckBoxPreference
+                android:key="enable_http"
+                android:title="HTTP server"
+                android:defaultValue="true"
+                android:summary="Enable/Disable the http interface" />
+	    
+        <CheckBoxPreference
+                android:key="enable_rtsp"
+                android:title="RTSP server"
+                android:defaultValue="true"
+                android:summary="Enable/Disable the rtsp interface" />
+        
+    </PreferenceCategory>
+        
 </PreferenceScreen>
