Bugfix -> NullPointerException in H264Stream.java
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@137 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -8,7 +8,7 @@
         <CheckBoxPreference
                 android:key="stream_audio"
                 android:title="Sound streaming"
-                android:defaultValue="true"
+                android:defaultValue="false"
                 android:summary="Enable/Disable audio streaming" />
 
         <ListPreference
