--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -3,4 +3,7 @@
     <item android:id="@+id/options"
           android:icon="@drawable/options"
           android:title="Options" />
+    <item android:id="@+id/quit"
+          android:icon="@drawable/quit"
+          android:title="Quitter" />
 </menu>
