Spydroid v6.0 - Bug fixes in the RTSP server, it now can communicate with a VideoView - Conf changes in the web interface are now persistant - New design - new ClientActivity that contains a VideoView - some code cleaning
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@162 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/layout/client.xml
+++ b/res/layout/client.xml
@@ -1,7 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MediaController xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="fill_parent" 
+    android:layout_width="fill_parent">
+	
+	<FrameLayout
+	    android:id="@+id/video_container"
+	    android:layout_height="fill_parent" 
+   	    android:layout_width="fill_parent">
+	</FrameLayout>
+	
+	<RelativeLayout
+	    android:background="@drawable/background"
+	    android:id="@+id/control"
+	    android:layout_height="fill_parent" 
+        android:layout_width="fill_parent">
 
-</MediaController>
+	    <TextView
+	        android:padding="10dp"
+	        android:gravity="center"
+	        android:textSize="17dp"
+	        android:layout_centerHorizontal="true"
+	        android:layout_above="@+id/server_ip"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/ask_client_ip" />
+
+	    <EditText
+	        android:singleLine="true"
+	        android:gravity="center"
+	        android:textColor="@android:color/black"
+	        android:layout_marginTop="10dp"
+	        android:layout_width="200dp"
+	        android:layout_height="wrap_content"
+	        android:imeOptions="actionDone"
+	        android:imeActionLabel="@string/connection"
+	        android:id="@+id/server_ip"
+			android:layout_centerVertical="true"
+	        android:layout_centerHorizontal="true" />
+	    	    
+	    <Button
+	        android:layout_marginTop="10dp"
+	        android:text="@string/connection"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" 
+	        android:layout_below="@+id/server_ip"
+	        android:id="@+id/button_connect"
+	        android:layout_centerHorizontal="true"
+	        
+	        />
+	    	    	    
+	</RelativeLayout>
+</FrameLayout>
