--- a/res/layout/client.xml
+++ b/res/layout/client.xml
@@ -16,14 +16,14 @@
         android:layout_width="fill_parent">
 
 	    <TextView
-	        android:padding="10dp"
+	        android:padding="20dp"
 	        android:gravity="center"
 	        android:textSize="17dp"
 	        android:layout_centerHorizontal="true"
 	        android:layout_above="@+id/server_ip"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="@string/ask_client_ip" />
+	        android:text="@string/client0" />
 
 	    <EditText
 	        android:singleLine="true"
@@ -33,14 +33,14 @@
 	        android:layout_width="200dp"
 	        android:layout_height="wrap_content"
 	        android:imeOptions="actionDone"
-	        android:imeActionLabel="@string/connection"
+	        android:imeActionLabel="@string/client1"
 	        android:id="@+id/server_ip"
 			android:layout_centerVertical="true"
 	        android:layout_centerHorizontal="true" />
 	    	    
 	    <Button
-	        android:layout_marginTop="10dp"
-	        android:text="@string/connection"
+	        android:layout_marginTop="20dp"
+	        android:text="@string/client1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 
 	        android:layout_below="@+id/server_ip"
