--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -11,7 +11,6 @@
    
    <ImageView
         android:background="@drawable/background"
-        android:id="@+id/background"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center" />
@@ -38,12 +37,12 @@
 			     android:layout_height="wrap_content">
 			 
 			   <RelativeLayout
-			       android:gravity="center" 
-			       android:background="@android:color/black"
-			       android:paddingTop="10dp"
-			       android:paddingBottom="10dp"
 			       android:layout_width="fill_parent"
-			       android:layout_height="wrap_content" >
+			       android:layout_height="wrap_content"
+			       android:background="#001629"
+			       android:gravity="center"
+			       android:paddingBottom="10dp"
+			       android:paddingTop="10dp" >
 			
 			       <ImageView
 			           android:id="@+id/imageView1"
