- Improved client (ClientActivity.java) - Bux fixes
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@164 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -14,7 +14,7 @@
     
     
     <string-array name="audioEncoderArray">
-        <item>AMR</item>
+        <item>AMR-NB</item>
         <item>AAC</item>
     </string-array>
 
